--- a/quanLyNhaHang_Nhom4/quanLyNhaHang_Nhom4.csproj
+++ b/quanLyNhaHang_Nhom4/quanLyNhaHang_Nhom4.csproj
@@ -33,8 +33,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="FontAwesome.Sharp, Version=6.3.0.0, Culture=neutral, PublicKeyToken=d16d1e4e568ec10f, processorArchitecture=MSIL">
+      <HintPath>..\packages\FontAwesome.Sharp.6.3.0\lib\net472\FontAwesome.Sharp.dll</HintPath>
+    </Reference>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -44,6 +50,7 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Database\Account.cs" />
@@ -59,6 +66,12 @@
     <Compile Include="Database\Staff.cs" />
     <Compile Include="Database\TableFood.cs" />
     <Compile Include="Database\Unit.cs" />
+    <Compile Include="Manager\frmAttendanceList.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Manager\frmAttendanceList.Designer.cs">
+      <DependentUpon>frmAttendanceList.cs</DependentUpon>
+    </Compile>
     <Compile Include="Manager\frmLogin.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -86,6 +99,9 @@
     <Compile Include="NumberToText.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Manager\frmAttendanceList.resx">
+      <DependentUpon>frmAttendanceList.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Manager\frmLogin.resx">
       <DependentUpon>frmLogin.cs</DependentUpon>
     </EmbeddedResource>
@@ -108,6 +124,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
