--- a/quanLyNhaHang_Nhom4/quanLyNhaHang_Nhom4.csproj
+++ b/quanLyNhaHang_Nhom4/quanLyNhaHang_Nhom4.csproj
@@ -53,25 +53,12 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Admin\Account.cs">
+    <Compile Include="Admin\frmAdminAccount.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Admin\Account.designer.cs">
-      <DependentUpon>Account.cs</DependentUpon>
+    <Compile Include="Admin\frmAdminAccount.Designer.cs">
+      <DependentUpon>frmAdminAccount.cs</DependentUpon>
     </Compile>
-    <Compile Include="Database\Account.cs" />
-    <Compile Include="Database\AttendanceList.cs" />
-    <Compile Include="Database\Bill.cs" />
-    <Compile Include="Database\BillInfo.cs" />
-    <Compile Include="Database\BillInfoOfWareHouse.cs" />
-    <Compile Include="Database\BillOfWareHouse.cs" />
-    <Compile Include="Database\Food.cs" />
-    <Compile Include="Database\FoodCategory.cs" />
-    <Compile Include="Database\Material.cs" />
-    <Compile Include="Database\Position.cs" />
-    <Compile Include="Database\Staff.cs" />
-    <Compile Include="Database\TableFood.cs" />
-    <Compile Include="Database\Unit.cs" />
     <Compile Include="Manager\frmAttendanceList.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -83,6 +70,12 @@
     </Compile>
     <Compile Include="Manager\frmHome.Designer.cs">
       <DependentUpon>frmHome.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Manager\frmInfomation.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Manager\frmInfomation.Designer.cs">
+      <DependentUpon>frmInfomation.cs</DependentUpon>
     </Compile>
     <Compile Include="Manager\frmLogin.cs">
       <SubType>Form</SubType>
@@ -123,14 +116,17 @@
     <Compile Include="NumberToText.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Admin\Account.resx">
-      <DependentUpon>Account.cs</DependentUpon>
+    <EmbeddedResource Include="Admin\frmAdminAccount.resx">
+      <DependentUpon>frmAdminAccount.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Manager\frmAttendanceList.resx">
       <DependentUpon>frmAttendanceList.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Manager\frmHome.resx">
       <DependentUpon>frmHome.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Manager\frmInfomation.resx">
+      <DependentUpon>frmInfomation.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Manager\frmLogin.resx">
       <DependentUpon>frmLogin.cs</DependentUpon>
@@ -181,6 +177,7 @@
     <Content Include="Resources\icons8-pencil-30.png" />
     <Content Include="Resources\icons8-plus-30.png" />
     <Content Include="Resources\icons8-research-30.png" />
+    <None Include="Resources\low-vision-solid-24.png" />
     <Content Include="Resources\pngtree-unlock-glyph-icon-vector-png-image_1859166.jpg" />
   </ItemGroup>
   <ItemGroup>
@@ -218,6 +215,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Close-2-icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Database\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
