--- a/quanLyNhaHang_Nhom4/quanLyNhaHang_Nhom4.csproj
+++ b/quanLyNhaHang_Nhom4/quanLyNhaHang_Nhom4.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -73,6 +74,12 @@
     </Compile>
     <Compile Include="Admin\frmAdminAccount.Designer.cs">
       <DependentUpon>frmAdminAccount.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Admin\frmAdminRevenue.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Admin\frmAdminRevenue.designer.cs">
+      <DependentUpon>frmAdminRevenue.cs</DependentUpon>
     </Compile>
     <Compile Include="Admin\frmAdminStaff.cs">
       <SubType>Form</SubType>
@@ -144,6 +151,9 @@
       <DependentUpon>QuanLyNhaHangEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="Database\USP_GetAccountByName_Result.cs">
+      <DependentUpon>QuanLyNhaHangEntities.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Database\USP_GetFoodTop5_Result.cs">
       <DependentUpon>QuanLyNhaHangEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="Database\USP_GetListBillByDate_Result.cs">
@@ -224,6 +234,12 @@
     <Compile Include="Manager\frmManagerFood.Designer.cs">
       <DependentUpon>frmManagerFood.cs</DependentUpon>
     </Compile>
+    <Compile Include="Manager\frmTableManager.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Manager\frmTableManager.Designer.cs">
+      <DependentUpon>frmTableManager.cs</DependentUpon>
+    </Compile>
     <Compile Include="Manager\frmWareHouse.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -244,6 +260,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Admin\frmAdminAccount.resx">
       <DependentUpon>frmAdminAccount.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Admin\frmAdminRevenue.resx">
+      <DependentUpon>frmAdminRevenue.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Admin\frmAdminStaff.resx">
       <DependentUpon>frmAdminStaff.cs</DependentUpon>
@@ -277,6 +296,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Manager\frmManagerFood.resx">
       <DependentUpon>frmManagerFood.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Manager\frmTableManager.resx">
+      <DependentUpon>frmTableManager.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Manager\frmWareHouse.resx">
       <DependentUpon>frmWareHouse.cs</DependentUpon>
@@ -390,7 +412,10 @@
     <Content Include="Image\Icon\error.png" />
     <Content Include="Image\Icon\info.png" />
     <Content Include="Image\Icon\question.png" />
+    <Content Include="Image\Icon\trong.png" />
     <Content Include="Image\Icon\warning.png" />
+    <None Include="Resources\billing.png" />
+    <None Include="Resources\billing %281%29.png" />
     <Content Include="Resources\icons8-eye-30.png" />
     <Content Include="Resources\icons8-lock-50.png" />
     <Content Include="Resources\icons8-minus-30.png" />
