Hoan thanh chuc nang xoa ban trong frmTableManager

--- a/quanLyNhaHang_Nhom4/quanLyNhaHang_Nhom4.csproj
+++ b/quanLyNhaHang_Nhom4/quanLyNhaHang_Nhom4.csproj
@@ -441,6 +441,7 @@
     <None Include="Resources\billing.png" />
     <None Include="Resources\billing %281%29.png" />
     <None Include="Resources\bill.png" />
+    <None Include="Resources\delete.png" />
     <Content Include="Resources\icons8-eye-30.png" />
     <Content Include="Resources\icons8-lock-50.png" />
     <Content Include="Resources\icons8-minus-30.png" />
